[tool.poetry]
name = "migraine-tracker"
version = "0.1.0"
description = "This is the backend service for migraine_tracker"
authors = ["Tasmim-Adib <tasmim.adib@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.29.0"
pydantic = "^2.9.2"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
